Labs/Lab_AppGateway_ASG/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.31.92.45157",
      "templateHash": "6643357710605961700"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources"
      }
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "azureadmin",
      "metadata": {
        "description": "Admin username for VMs"
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Admin password for VMs"
      }
    },
    "dnsLabelPrefix": {
      "type": "string",
      "defaultValue": "[format('appgw-{0}', uniqueString(resourceGroup().id))]",
      "metadata": {
        "description": "Unique DNS prefix for the Public IP"
      }
    }
  },
  "variables": {
    "vnetName": "vnet-lab-appgw",
    "vnetAddressPrefix": "10.10.0.0/16",
    "appGatewaySubnetName": "AppGatewaySubnet",
    "appGatewaySubnetPrefix": "10.10.0.0/24",
    "webSubnetName": "WebSubnet",
    "webSubnetPrefix": "10.10.1.0/24",
    "appSubnetName": "AppSubnet",
    "appSubnetPrefix": "10.10.2.0/24",
    "appGatewayName": "appgw-lab",
    "appGatewayPublicIPName": "pip-appgw",
    "asgWebName": "asg-webservers",
    "asgAppName": "asg-appservers",
    "nsgWebName": "nsg-web-tier",
    "nsgAppName": "nsg-app-tier",
    "webVmNames": [
      "vm-web-01",
      "vm-web-02"
    ],
    "appVmName": "vm-app-01",
    "vmSize": "Standard_B2s"
  },
  "resources": [
    {
      "type": "Microsoft.Network/applicationSecurityGroups",
      "apiVersion": "2023-09-01",
      "name": "[variables('asgWebName')]",
      "location": "[parameters('location')]",
      "properties": {}
    },
    {
      "type": "Microsoft.Network/applicationSecurityGroups",
      "apiVersion": "2023-09-01",
      "name": "[variables('asgAppName')]",
      "location": "[parameters('location')]",
      "properties": {}
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-09-01",
      "name": "[variables('nsgWebName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-HTTP-From-AppGateway",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "[variables('appGatewaySubnetPrefix')]",
              "sourcePortRange": "*",
              "destinationApplicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgWebName'))]"
                }
              ],
              "destinationPortRange": "80",
              "description": "Allow HTTP traffic from Application Gateway subnet to web servers"
            }
          },
          {
            "name": "Allow-HTTPS-From-AppGateway",
            "properties": {
              "priority": 110,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "[variables('appGatewaySubnetPrefix')]",
              "sourcePortRange": "*",
              "destinationApplicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgWebName'))]"
                }
              ],
              "destinationPortRange": "443",
              "description": "Allow HTTPS traffic from Application Gateway subnet to web servers"
            }
          },
          {
            "name": "Allow-AppGateway-Health-Probes",
            "properties": {
              "priority": 120,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "GatewayManager",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "65200-65535",
              "description": "Allow Application Gateway v2 health probes"
            }
          },
          {
            "name": "Allow-RDP-For-Management",
            "properties": {
              "priority": 200,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationApplicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgWebName'))]"
                }
              ],
              "destinationPortRange": "3389",
              "description": "Allow RDP for lab management (restrict in production!)"
            }
          },
          {
            "name": "Deny-All-Inbound",
            "properties": {
              "priority": 4096,
              "direction": "Inbound",
              "access": "Deny",
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "*",
              "description": "Deny all other inbound traffic"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgWebName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-09-01",
      "name": "[variables('nsgAppName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-From-WebServers-ASG",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceApplicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgWebName'))]"
                }
              ],
              "sourcePortRange": "*",
              "destinationApplicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgAppName'))]"
                }
              ],
              "destinationPortRange": "8080",
              "description": "Allow traffic from web tier (ASG) to app tier (ASG) on port 8080"
            }
          },
          {
            "name": "Allow-RDP-For-Management",
            "properties": {
              "priority": 200,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationApplicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgAppName'))]"
                }
              ],
              "destinationPortRange": "3389",
              "description": "Allow RDP for lab management (restrict in production!)"
            }
          },
          {
            "name": "Deny-All-Inbound",
            "properties": {
              "priority": 4096,
              "direction": "Inbound",
              "access": "Deny",
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "*",
              "description": "Deny all other inbound traffic"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgAppName'))]",
        "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgWebName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-09-01",
      "name": "[variables('vnetName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vnetAddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('appGatewaySubnetName')]",
            "properties": {
              "addressPrefix": "[variables('appGatewaySubnetPrefix')]"
            }
          },
          {
            "name": "[variables('webSubnetName')]",
            "properties": {
              "addressPrefix": "[variables('webSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgWebName'))]"
              }
            }
          },
          {
            "name": "[variables('appSubnetName')]",
            "properties": {
              "addressPrefix": "[variables('appSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppName'))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgWebName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-09-01",
      "name": "[variables('appGatewayPublicIPName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "dnsSettings": {
          "domainNameLabel": "[parameters('dnsLabelPrefix')]"
        }
      }
    },
    {
      "type": "Microsoft.Network/applicationGateways",
      "apiVersion": "2023-09-01",
      "name": "[variables('appGatewayName')]",
      "location": "[parameters('location')]",
      "properties": {
        "sku": {
          "name": "Standard_v2",
          "tier": "Standard_v2",
          "capacity": 2
        },
        "gatewayIPConfigurations": [
          {
            "name": "appGatewayIpConfig",
            "properties": {
              "subnet": {
                "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')), '2023-09-01').subnets[0].id]"
              }
            }
          }
        ],
        "frontendIPConfigurations": [
          {
            "name": "appGatewayFrontendIP",
            "properties": {
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('appGatewayPublicIPName'))]"
              }
            }
          }
        ],
        "frontendPorts": [
          {
            "name": "port_80",
            "properties": {
              "port": 80
            }
          }
        ],
        "backendAddressPools": [
          {
            "name": "webBackendPool",
            "properties": {
              "backendAddresses": [
                {
                  "ipAddress": "[reference(resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('webVmNames')[0])), '2023-09-01').ipConfigurations[0].properties.privateIPAddress]"
                },
                {
                  "ipAddress": "[reference(resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('webVmNames')[1])), '2023-09-01').ipConfigurations[0].properties.privateIPAddress]"
                }
              ]
            }
          }
        ],
        "backendHttpSettingsCollection": [
          {
            "name": "httpSettings",
            "properties": {
              "port": 80,
              "protocol": "Http",
              "cookieBasedAffinity": "Disabled",
              "pickHostNameFromBackendAddress": false,
              "requestTimeout": 30,
              "probe": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/probes', variables('appGatewayName'), 'healthProbe')]"
              }
            }
          }
        ],
        "httpListeners": [
          {
            "name": "httpListener",
            "properties": {
              "frontendIPConfiguration": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/frontendIPConfigurations', variables('appGatewayName'), 'appGatewayFrontendIP')]"
              },
              "frontendPort": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/frontendPorts', variables('appGatewayName'), 'port_80')]"
              },
              "protocol": "Http"
            }
          }
        ],
        "requestRoutingRules": [
          {
            "name": "routingRule",
            "properties": {
              "priority": 100,
              "ruleType": "Basic",
              "httpListener": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/httpListeners', variables('appGatewayName'), 'httpListener')]"
              },
              "backendAddressPool": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/backendAddressPools', variables('appGatewayName'), 'webBackendPool')]"
              },
              "backendHttpSettings": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/backendHttpSettingsCollection', variables('appGatewayName'), 'httpSettings')]"
              }
            }
          }
        ],
        "probes": [
          {
            "name": "healthProbe",
            "properties": {
              "protocol": "Http",
              "path": "/",
              "interval": 30,
              "timeout": 30,
              "unhealthyThreshold": 3,
              "pickHostNameFromBackendHttpSettings": false,
              "host": "127.0.0.1",
              "match": {
                "statusCodes": [
                  "200-399"
                ]
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('appGatewayPublicIPName'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('webVmNames')[0]))]",
        "[resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('webVmNames')[1]))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
      ]
    },
    {
      "copy": {
        "name": "nicWeb",
        "count": "[length(variables('webVmNames'))]"
      },
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2023-09-01",
      "name": "[format('nic-{0}', variables('webVmNames')[copyIndex()])]",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')), '2023-09-01').subnets[1].id]"
              },
              "applicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgWebName'))]"
                }
              ]
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgWebName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2023-09-01",
      "name": "[format('nic-{0}', variables('appVmName'))]",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')), '2023-09-01').subnets[2].id]"
              },
              "applicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgAppName'))]"
                }
              ]
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgAppName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
      ]
    },
    {
      "copy": {
        "name": "vmWeb",
        "count": "[length(variables('webVmNames'))]"
      },
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2023-09-01",
      "name": "[variables('webVmNames')[copyIndex()]]",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('webVmNames')[copyIndex()]]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2022-datacenter-azure-edition",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Standard_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('webVmNames')[copyIndex()]))]"
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('webVmNames')[copyIndex()]))]"
      ]
    },
    {
      "copy": {
        "name": "iisExtension",
        "count": "[length(variables('webVmNames'))]"
      },
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "apiVersion": "2023-09-01",
      "name": "[format('{0}/{1}', variables('webVmNames')[copyIndex()], 'InstallIIS')]",
      "location": "[parameters('location')]",
      "properties": {
        "publisher": "Microsoft.Compute",
        "type": "CustomScriptExtension",
        "typeHandlerVersion": "1.10",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "commandToExecute": "[format('powershell -ExecutionPolicy Unrestricted -Command \"Install-WindowsFeature -Name Web-Server -IncludeManagementTools; Remove-Item C:\\inetpub\\wwwroot\\iisstart.htm -Force; Add-Content -Path C:\\inetpub\\wwwroot\\iisstart.htm -Value ''<html><body><h1>Hello from {0}</h1><p>This response is from the web tier behind Application Gateway</p><p>Server: {1}</p></body></html>''\"', variables('webVmNames')[copyIndex()], variables('webVmNames')[copyIndex()])]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines', variables('webVmNames')[copyIndex()])]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2023-09-01",
      "name": "[variables('appVmName')]",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('appVmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2022-datacenter-azure-edition",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Standard_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('appVmName')))]"
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('appVmName')))]"
      ]
    }
  ],
  "outputs": {
    "appGatewayPublicIP": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('appGatewayPublicIPName')), '2023-09-01').ipAddress]"
    },
    "appGatewayFQDN": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('appGatewayPublicIPName')), '2023-09-01').dnsSettings.fqdn]"
    },
    "webVm1PrivateIP": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('webVmNames')[0])), '2023-09-01').ipConfigurations[0].properties.privateIPAddress]"
    },
    "webVm2PrivateIP": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('webVmNames')[1])), '2023-09-01').ipConfigurations[0].properties.privateIPAddress]"
    },
    "appVmPrivateIP": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('appVmName'))), '2023-09-01').ipConfigurations[0].properties.privateIPAddress]"
    },
    "asgWebId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgWebName'))]"
    },
    "asgAppId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('asgAppName'))]"
    }
  }
}
